Thoughts on Java in payloads/java/README.md (#720)